# morningstar-fund-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
morningstar_fund_scraper/: __init__.py  morningstar_fund_scraper.py
tests/: test_morningstar_fund_scraper.py
